--- a/app/views/users/user_details.html.erb
+++ b/app/views/users/user_details.html.erb
@@ -1,2 +1,29 @@
-<h1>Users#details</h1>
-<p>Find me in app/views/users/user_details.html.erb</p>
+<div class="my-3 d-flex justify-content-around align-items-center flex-wrap gap-2">
+
+  <%= image_tag @user.photo, height: 100, width: 100 %>
+
+
+  <h2><%= @user.name %></h2>
+
+  <button type="button" class="btn btn-primary align-self-end">
+    Number of posts:
+    <span class="badge bg-secondary">
+      <%= @user.post_counter ? @user.post_counter : 0 %>
+    </span>
+  </button>
+</div>
+
+<div class="bg-secondary p-5">
+  <h2>Bio</h2>
+  <p><%= @user.bio %></p>
+</div>
+
+<ul class="list-group mt-5">
+  <% @user.posts.each do |post| %>
+    <%= render 'users/post', post: post %>
+  <% end %>
+</ul>
+
+<button type="button" class="btn btn-secondary">
+  See all posts
+</button>
