Modify views for validation

--- a/app/views/users/_post.html.erb
+++ b/app/views/users/_post.html.erb
@@ -8,7 +8,7 @@
     <button type="button" class="btn btn-primary">
       Comments:
       <span class="badge bg-secondary">
-        <%= post.comments_counter  ? post.comments_counter : 0 %>
+     <%= post.commentsCounter ? post.commentsCounter : 0 %>
       </span>
     </button>
     <button type="button" class="btn btn-primary">
