--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -13,10 +13,10 @@
             <%= post.commentsCounter  ? post.commentsCounter : 0 %>
           </span>
         </button>
-       <button type="button" class="btn btn-primary" disable>
+        <button type="button" class="btn btn-primary">
           Likes:
           <span class="badge bg-secondary">
-           <%= post.likesCounter ? post.likesCounter : 0 %>
+            <%= post.likesCounter ? post.likesCounter  : 0 %>
           </span>
         </button>
       </div>
