--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,39 +1,50 @@
-<div class="my-3 border border-secondary p-4 bg-light rounded">
-
-<%= render 'shared/flash' %>
+<div class="my-3 border border-secondary p-2">
 
   <div class="d-flex justify-content-between">
-  
+
     <h2><%= @post.title %> by <%= @post.author.name %></h2>
+
     <div>
       <button type="button" class="btn btn-primary">
         Comments:
+        <span class="badge bg-secondary">
+          <%= @post.commentsCounter  ? @post.commentsCounter : 0 %>
+        </span>
       </button>
-      <span class="badge bg-secondary">
-        <%= @post.commentsCounter  ? @post.commentsCounter : 0 %>
-      </span>
-
-      <%= render "add_like", post: @post %>
+      <button type="button" class="btn btn-primary">
+        Likes:
+        <span class="badge bg-secondary">
+          <%= @post.likesCounter ? @post.likesCounter  : 0 %>
+        </span>
+      </button>
     </div>
+
   </div>
+
   <p>
     <%= @post.text %>
   </p>
 
-  <div class="mt-5"> 
+  <div> 
     <h4> Comments </h4>
 
     <ul class="list-group">
       <% if @post.comments.length > 0 %>
-        <%= render 'comments' %>
+        <% @post.comments.each do |comment| %>
+        <li class="list-group-item"><%= comment.author.name %> : <%= comment.text %></li>
+        <% end %>
       <% else %>
         <li class="list-group-item">No comments</li>
       <% end %>
     </ul>
+    <%
+=begin%>
+ <a href="/users/<%= @user.id %>/posts" class="btn btn-secondary w-100 my-3">
+      See All Posts
+    </a> 
+<%
+=end%>
+    <%= link_to "See All Posts" "/users/<%= @user.id %>/posts" class="btn btn-secondary w-100 my-3"%>
   </div>
 
-  <div class="mt-5">
-   <h4 class="mb-3">Add Comment</h4>
-    <%= render "add_comment", post: @post %>
-  </div>
 </div>
