--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,2 @@
-<div class="text-light mt-5">
-  <h2 class="mb-4">Create New Post</h2>
-  <%= render "form", post: @post %>
-</div>
+
+  <%= render 'form', post: @post %>
