--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MyBlogApp</title>
+    <title>BlogProject</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <!-- Latest compiled and minified CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-     <div class="container">
+    <% if flash.any? %>
+      <%= render 'layouts/messages' %>
+    <% end %>
+
     <%= yield %>
-    <div>
-    <%= render partial: 'layouts/footer' %>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
+
   </body>
 </html>
