--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,39 +1,62 @@
-<div class="my-3 border border-secondary p-4 bg-light rounded">
+<div class = "bg-light card col-md-8 m-auto mt-5  p-3" >
 
-<%= render 'shared/flash' %>
-
-  <div class="d-flex justify-content-between">
-  
-    <h2><%= @post.title %> by <%= @post.author.name %></h2>
+  <div class="mb-3 d-flex flex-row justify-content-between">
     <div>
-      <button type="button" class="btn btn-primary">
-        Comments:
-      </button>
-      <span class="badge bg-secondary">
-        <%= @post.commentsCounter  ? @post.commentsCounter : 0 %>
-      </span>
+        <h5>Post# <%=  @post.id %> by <%= @user.name %> </h5> 
+    </div>
 
-      <%= render "add_like", post: @post %>
+    <div class="d-flex flex-row justify-content-between" >
+      <p class="text-right"> Likes: <%= @post.likes_counter ? @post.likes_counter : 0  %>&nbsp</p>
+      <p class="text-right"> &nbsp Comments: <%= @post.comments_counter ? @post.comments_counter : 0 %></p>
+    </div> 
+
+  </div>
+
+  <div>
+    <%=  @post.text %>
+    <div class="d-flex justify-content-end">
+      <%= form_with url: "#{@post.id}/likes" do |f| %>
+        <%= f.submit "like", :type => :image,  :src => image_path("heart.svg") %>
+      <% end %> 
+    </div>
+
+  </div>
+
+</div>
+
+<div class = "card col-md-8 mt-4 mb-5 m-auto  p-3 d-flex" >
+<% if @post.comments.length > 0 %>
+  <h3>Comments for post# <%=  @post.id %> </h3>
+  <div>
+      <% @post.comments.each do |comment| %>
+          <p><%= comment.author.name %>: <%= comment.text %></p>
+      <% end %>
+
+  </div>
+  <% else %>
+    <h3>No comments for post# <%=  @post.id %> </h3>
+  <% end %>
+</div>
+
+<div class="row form">
+  <%= form_with  url: "#{@post.id}/comments", scope: :comment do |form| %>
+    <div class= "col-sm-8 m-auto d-flex mt-3" >
+      <%= form.text_area :text, class:"form-control col-12", autofocus: true, placeholder: "White your comment...", rows: 10%>
+    </div>
+    <div class= "col-sm-8 m-auto d-flex mt-2" >
+        <%= form.submit "Comment", class: "btn btn-sm btn-outline-success submit-btn" %>
+    </div>
+  <% end %>
+</div>
+
+  <div class="row">
+    <div class = "col-md-10 m-auto pb-5 d-flex justify-content-center" >
+      <div class= "mt-4">
+        <%= link_to "See all users", root_url, class:'btn btn-xs btn-outline-success' %>  
+      </div>
     </div>
   </div>
-  <p>
-    <%= @post.text %>
-  </p>
+  
 
-  <div class="mt-5"> 
-    <h4> Comments </h4>
 
-    <ul class="list-group">
-      <% if @post.comments.length > 0 %>
-        <%= render 'comments' %>
-      <% else %>
-        <li class="list-group-item">No comments</li>
-      <% end %>
-    </ul>
-  </div>
 
-  <div class="mt-5">
-   <h4 class="mb-3">Add Comment</h4>
-    <%= render "add_comment", post: @post %>
-  </div>
-</div>
