--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,14 @@
 
-<div class="d-flex align-items-center  justify-content-between col-6 m-auto"> 
+<div class="d-flex align-items-center  justify-content-between col-7 m-auto"> 
   <div>
   <h1 class = "p-4 text-center " >List of all users</h1>
     </div>
-  <div>
+
+  <div class='mr-2'>
   <%= link_to 'Create a new post', new_user_post_url(1) , class: 'btn btn-outline-success btn-sm'%>
+  <%= link_to "Edit account", edit_user_registration_path, class: 'btn btn-outline-primary btn-sm' %>
+  <%= link_to "Logout", destroy_user_session_path, class: 'btn btn-outline-danger btn-sm' %>  
   </div>
-  
 </div>
 
 <% @users.each do |user| %>
