--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,17 @@
 a {
   text-decoration: none;
 }
+
+.field input:not([type=checkbox]) {
+  outline: none;
+  height: 2.5rem;
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid gray;
+  margin: 1rem 0 1rem 0;
+  padding: 1rem;
+}
+
+.field label {
+  font-size: 1.5rem;
+}
