--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,25 @@
       <%= render 'layouts/messages' %>
     <% end %>
 
+<% if user_signed_in? %>
+    <div class="d-flex align-items-center  justify-content-between col-7 m-auto"> 
+      <%
+=begin%>
+ <h4 class = "p-4 text-center " >Current user: <%= current_user.email%></h4> 
+<%
+=end%>
+      <h4 class = "p-4 text-center " >Current user</h4>
+
+
+    <div class='mr-2'>
+
+      <%= link_to "Edit account", edit_user_registration_path, class: 'btn btn-outline-primary btn-sm' %>
+      <%= link_to 'Create a new post', new_user_post_url(@user) , class: 'btn btn-outline-success btn-sm'%>
+      <%= link_to "Logout", destroy_user_session_path, class: 'btn btn-outline-danger btn-sm' %>  
+    </div>
+  </div>
+<% end %>
+
     <%= yield %>
 
 
