--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
 
   <div class="mb-3 d-flex flex-row justify-content-between">
     <div>
-        <h5>Post# <%=  @post.id %> by <%= @user.name %> </h5> 
+        <h5>Post: <%= @post.title %> <%=  @post.id %> by <%= @user.name %> </h5> 
     </div>
 
     <div class="d-flex flex-row justify-content-between" >
